# midival_renaissance

./: Cargo.toml  Embed.toml  LICENSE-MIT  README.md
.cargo/: config.toml
crates/firmware/: Cargo.toml  rust-toolchain.toml
crates/firmware/.cargo/: config.toml
crates/firmware/src/: chord_cleanup.rs  configuration.rs  keyboard.rs  main.rs  note_provider.rs
crates/firmware/src/instrument/: micromoog.rs
crates/firmware/src/io/: control_voltage.rs  gate.rs
crates/software/: Cargo.toml
crates/software/src/: configuration.rs  lib.rs  midi_state.rs  portamento.rs
crates/software/src/configuration/: chord_cleanup.rs  envelope_trigger.rs  input_mode.rs  keyboard.rs  note_priority.rs  note_provider.rs
crates/software/src/midi_state/: activated_notes.rs  portamento.rs
src/: activated_notes.rs  active_keys.rs  configuration.rs  instrument.rs  io.rs  main.rs
src/instrument/: micromoog.rs
src/io/: control_voltage.rs  gate.rs  midi.rs
src/module/: keyboard.rs
