[package]
authors = ["Francisco José Gómez <francisco@pawpawworks.com>"]
description = "Firmware for a MIDI adapter targeting the Micromoog Model 2090, a vintage monophonic analog synthesizer"
edition = "2024"
exclude = [".vscode", ".readme-assets"]
license = "MIT OR Apache-2.0"
name = "midival_renaissance"
repository = "https://github.com/universalhandle/midival_renaissance"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.3.0", features = [
    "memory-x",
    "single-bank",
    "stm32f767zi",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
embassy-sync = "0.7.1"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embassy-usb = "0.5.0"
enum_dispatch = "0.3.13"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
static_cell = "2.1.1"
tinyvec = "1.9.0"
wmidi = { version = "4.0.10", default-features = false }

[[bin]]
name = "midival_renaissance"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
