[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["Francisco José Gómez <francisco@pawpawworks.com>"]
description = "Firmware for a MIDI adapter targeting the Micromoog Model 2090, a vintage monophonic analog synthesizer"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/universalhandle/midival_renaissance"
version = "0.1.0"

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
