[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "midival_renaissance"
repository.workspace = true
version.workspace = true

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.8.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.3.0", features = [
    "memory-x",
    "single-bank",
    "stm32f767zi",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
embassy-sync = "0.7.1"
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
embassy-usb = "0.5.0"
embedded-hal = "1.0.0"
enum_dispatch = "0.3.13"
midival_renaissance_lib = { path = "../software" }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
panic-halt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
static_cell = "2.1.1"
wmidi = { version = "4.0.10", default-features = false }

[[bin]]
name = "midival_renaissance"
test = false
bench = false

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
    "defmt",
    "defmt-rtt",
    "panic-probe",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-stm32/defmt",
]
