[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "midival_renaissance_lib"
repository.workspace = true
version.workspace = true

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-time = "0.5"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
tinyvec = "1.9.0"
wmidi = { version = "4.0.10", default-features = false }

[features]
defmt = ["dep:defmt"]
debug = ["defmt"]
