[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "midival_renaissance_lib"
repository.workspace = true
version.workspace = true

[dependencies]
defmt = { version = "1.0.1", optional = true }
embassy-time = "0.5"
measurements = "0.11.1"
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }
tinyvec = "1.9.0"
wmidi = { version = "4.0.10", default-features = false }

[dev-dependencies]
# copied from embassy-time; required for embassy-time-based tests to compile
critical-section = { version = "1.2", features = ["std"] }
# enable the mock time driver only when testing
embassy-time = { version = "0.5", features = ["mock-driver"] }

[features]
defmt = ["dep:defmt"]
debug = ["defmt"]
